--- a/diary-digging.ipynb
+++ b/diary-digging.ipynb
@@ -302,7 +302,7 @@
    "source": [
     "That day with the longest entry is during our honeymoon, our first full day in Big Sur. So no surprises there.\n",
     "\n",
-    "Next let's look at hour length varies over time."
+    "Next let's look at how length varies over time."
    ]
   },
   {
@@ -784,7 +784,7 @@
    "source": [
     "These seem to be mostly words which describe when and where things happened, which I must use pretty much every day.\n",
     "\n",
-    "How about what names I use? This is going to be harder because there's no easy or consistent way to detect which words are names, especially because I'm not very good at consistently capitalising them. So, somewhat crudely, I'm just going to go grab a list of names off the internet and then ammend it as required."
+    "How about what names I use? This is going to be harder because there's no easy or consistent way to detect which words are names, especially because I'm not very good at consistently capitalising them. So, somewhat crudely, I'm just going to go grab a list of names off the internet and then amend it as required."
    ]
   },
   {
@@ -1210,7 +1210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now for something a little more sophsiticated. Let's look for characteristic features of particular times. We can do this by training a single softmax classification model to predict the time using word count features."
+    "Now for something a little more sophsiticated. Let's look for characteristic features of particular times. We can do this by training a simple softmax classification model to predict the time using word count features."
    ]
   },
   {
@@ -2041,7 +2041,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is kinda fascinating. It's picked out lots of words related to what I was doing at work. 2013 and 2014 have lots of rowing words and stuff from my PhD. Katy appears and features prominantly in 2014 when we were dating. 2015 has stuff from my time as a consultant as Tesco, and from my first project at Quantcast. It also has 'recipe', which is nice as this was the year that we resolved to cook a new recipe each week. Lots of Quantcast words in 2016, plus 'cycle' appears - this was when I got my bike. In 2017 we did lots of hiking and went to China, both of which feature amongst lots of control system words."
+    "This is kinda fascinating. It's picked out lots of words related to what I was doing at work. 2013 and 2014 have lots of rowing words and stuff from my PhD. Katy appears and features prominantly in 2014 when we were dating. (Nowadays I just use 'we' to refer to both of us, so I use her name far less.) 2015 has stuff from my time as a consultant as Tesco, and from my first project at Quantcast. It also has 'recipe', which is nice as this was the year that we resolved to cook a new recipe each week. Lots of Quantcast words in 2016, plus 'cycle' appears - this was when I got my bike. In 2017 we did lots of hiking and went to China, both of which feature amongst lots of control system words."
    ]
   },
   {
